--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <h1>My Pokedex</h1>
     <ul class="pokemon-list"></ul>
-    <script src="js/scripts.js"></script>
+    <strong>
+      <script src="js/fetch-polyfill.js"></script>
+      <script src="js/promise-polyfill.js"></script>
+      <script src="js/scripts.js"></script>
+    </strong>
+    
   </body>
 </html>
