--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <h1>My Pokedex</h1>
     <ul class="pokemon-list"></ul>
+    <button id="show-modal"></button>
+    <div id="modal-container"></div>
     <strong>
       <script src="js/fetch-polyfill.js"></script>
       <script src="js/promise-polyfill.js"></script>
