--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 
     <h1>My Pokedex</h1>
     <div class="pokemon-list">
-      <ul class="pokemon-list list-group"></ul>
+      <ul class="list-group"></ul>
     </div>
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-      Launch demo modal
-    </button>
 
-    <div class="modal fade" id="modal-container" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="pokemonModalLabel">Details</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
+          </div>
+          <div>
+            <p></p>
           </div>
           <div class="modal-body"></div>
           <div class="modal-footer">
