added class pokemon-list to ul along with list-group

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h1>My Pokedex</h1>
     <div class="pokemon-list">
-      <ul class="list-group"></ul>
+      <ul class="list-group pokemon-list"></ul>
     </div>
 
 
