--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div>
-            <p></p>
+          <div class="modal-body">
+            <img id="pokemonImage" src="#" alt="Image of Pokemon" class="img-fluid">
+            <p id="pokemonHeight">
+              
+            </p>
           </div>
-          <div class="modal-body"></div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary">Save changes</button>
