changed h5 to div per tota11y error

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="pokemonModalLabel">Details</h5>
+            <div class="modal-title" id="pokemonModalLabel">Details</div>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -50,6 +50,7 @@
       <script src="js/fetch-polyfill.js"></script>
       <script src="js/promise-polyfill.js"></script>
       <script src="js/scripts.js"></script>
+      <script src="js/tota11y.min.js"></script>
     </strong>
     
   </body>
